c4prj2_input/grade.txt
Grading at Thu Mar 11 16:24:21 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:41:15: error: comparison between pointer and integer [-Werror]
     if (input == '\n'){continue;}
               ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
